force-app/main/default/objects/Legal_Request_Item__c/Legal_Request_Item__c.object-meta.xml
<CustomObject>
    <label>Legal Request Item</label>
    <nameField>
        <displayFormat>LRI-{000000}</displayFormat>
        <label>Legal Request Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Request Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>