force-app/main/default/objects/Legal_Request_Item__c/fields/Legal_Services__c.field-meta.xml
<CustomField>
    <fullName>Legal_Services__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Services</label>
    <referenceTo>Legal_Services__c</referenceTo>
    <relationshipLabel>Legal Request Items</relationshipLabel>
    <relationshipName>Legal_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>