force-app/main/default/objects/Legal_Request_Item__c/fields/Project_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Site_Name__c</fullName>
    <label>Project Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>