force-app/main/default/objects/Legal_Request_Item__c/fields/Site_Documents_URL__c.field-meta.xml
<CustomField>
    <fullName>Site_Documents_URL__c</fullName>
    <label>Site Documents URL</label>
    <type>Url</type>
</CustomField>